# gpa-pyqt6-spring2024

./: README.md  pyproject.toml
gpa_calculator/: app.py  controller.py
