[tool.poetry]
name = "gpa-calculator"
version = "0.1.0"
description = ""
authors = ["Cryonic <tayla203@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "gpa_calculator"}]

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
